refactor, establish DetectionEngine class

--- a/src/detection/CMakeLists.txt
+++ b/src/detection/CMakeLists.txt
@@ -2,6 +2,7 @@
 set (DETECTION_INCLUDES
     detect.h
     detection_defines.h
+    detection_engine.h
     detection_options.h
     detection_util.h
     ips_context.h
@@ -17,6 +18,7 @@ add_library (detection STATIC
     context_switcher.cc
     context_switcher.h
     detect.cc
+    detection_engine.cc
     detection_options.cc
     detection_util.cc
     fp_config.cc
