--- a/src/detection/Makefile.am
+++ b/src/detection/Makefile.am
@@ -6,6 +6,7 @@ x_includedir = $(pkgincludedir)/detection
 x_include_HEADERS = \
 detect.h \
 detection_defines.h \
+detection_engine.h \
 detection_options.h \
 detection_util.h \
 ips_context.h \
@@ -19,6 +20,7 @@ libdetection_a_SOURCES = \
 context_switcher.cc \
 context_switcher.h \
 detect.cc \
+detection_engine.cc \
 detection_options.cc \
 detection_util.cc \
 fp_config.cc \
