--- a/src/detection/Makefile.am
+++ b/src/detection/Makefile.am
@@ -34,6 +34,8 @@ fp_utils.h \
 ips_context.cc \
 pcrm.cc \
 pcrm.h \
+rtn_checks.cc \
+rtn_checks.h \
 service_map.cc \
 service_map.h \
 sfrim.cc \
