initial version of regex offload

--- a/src/detection/CMakeLists.txt
+++ b/src/detection/CMakeLists.txt
@@ -7,6 +7,7 @@ set (DETECTION_INCLUDES
     detection_util.h
     ips_context.h
     pattern_match_data.h
+    regex_offload.h
     rule_option_types.h
     rules.h
     signature.h
@@ -32,6 +33,7 @@ add_library (detection STATIC
     ips_context.cc
     pcrm.cc
     pcrm.h
+    regex_offload.cc
     rtn_checks.cc
     rtn_checks.h
     service_map.cc
