--- a/src/detection/Makefile.am
+++ b/src/detection/Makefile.am
@@ -11,6 +11,7 @@ detection_options.h \
 detection_util.h \
 ips_context.h \
 pattern_match_data.h \
+regex_offload.h \
 rule_option_types.h \
 rules.h \
 signature.h \
@@ -34,6 +35,7 @@ fp_utils.h \
 ips_context.cc \
 pcrm.cc \
 pcrm.h \
+regex_offload.cc \
 rtn_checks.cc \
 rtn_checks.h \
 service_map.cc \
